added basic layout

--- a/index.html
+++ b/index.html
@@ -11,7 +11,142 @@
 </head>
 
 <body>
-
+    <div class="container">
+        <div class="header">
+            <div class="header-top">
+                <div class="searchbar">
+                    <div class="search-icon">MAG GLASS</div>
+                    <div class="search-bar">SEARCHBAR</div>
+                </div>
+                <div class="settings">
+                    <button class="notifications">BELL</button>
+                    <button class="user-themes">LILPIC</button>
+                    <button class="user-settings">USERNAME</button>
+                </div>
+            </div>
+            <div class="header-main">
+                <div class="profile-pic">PIC</div>
+                <div class="greeting">
+                    <div class="saluations">SALUTATIONS</div>
+                    <div class="user-name">USER</div>
+                </div>
+                <div class="user-create-content">
+                    <button class="button-style">NEW</button>
+                    <button class="button-style">UPLOAD</button>
+                    <button class="button-style">SHARE</button>
+                </div>
+            </div>
+        </div>
+        <div class="sidebar">
+            <div class="brand-logo">
+                <div class="logo-image">IMG</div>
+                <div class="brand-logo-text">BRAND TEXT</div>
+            </div>
+            <div class="nav-links">
+                <div id="sidebar-home" class="sidebar-links">HOME</div>
+                <div id="sidebar-profile" class="sidebar-links">PROFILE</div>
+                <div id="sidebar-messages" class="sidebar-links">MESSAGES</div>
+                <div id="sidebar-history" class="sidebar-links">HISTORY</div>
+                <div id="sidebar-tasks" class="sidebar-links">TASKS</div>
+                <div id="sidebar-communities" class="sidebar-links">COMMUNITIES</div>
+            </div>
+            <div class="general-settings">
+                <div id="sidebar-settngs" class="sidebar-links">SETTINGS</div>
+                <div id="sidebar-support" class="sidebar-links">SUPPORT</div>
+                <div id="sidebar-privacy" class="sidebar-links">PRIVACY</div>
+            </div>
+        </div>
+        <div class="main">
+            <div class="user-projects">
+                <div class="super-cool-project">
+                    <div class="project-title">TITLE GOES HERE</div>
+                    <div class="project-text">A BIT OF LOREM IP</div>
+                    <div class="project-links">
+                        <div class="project-star">STAR</div>
+                        <div class="quick-look">EYE</div>
+                        <div class="share-project">SHARE</div>
+                    </div>
+                </div>
+                <div class="less-cool-project">
+                    <div class="project-title">TITLE GOES HERE</div>
+                    <div class="project-text">A BIT OF LOREM IP</div>
+                    <div class="project-links">
+                        <div class="project-star">STAR</div>
+                        <div class="quick-look">EYE</div>
+                        <div class="share-project">SHARE</div>
+                    </div>
+                </div>
+                <div class="impossible-app">
+                    <div class="project-title">TITLE GOES HERE</div>
+                    <div class="project-text">A BIT OF LOREM IP</div>
+                    <div class="project-links">
+                        <div class="project-star">STAR</div>
+                        <div class="quick-look">EYE</div>
+                        <div class="share-project">SHARE</div>
+                    </div>
+                </div>
+                <div class="easy-peasy-app">
+                    <div class="project-title">TITLE GOES HERE</div>
+                    <div class="project-text">A BIT OF LOREM IP</div>
+                    <div class="project-links">
+                        <div class="project-star">STAR</div>
+                        <div class="quick-look">EYE</div>
+                        <div class="share-project">SHARE</div>
+                    </div>
+                </div>
+                <div class="ad-blocker">
+                    <div class="project-title">TITLE GOES HERE</div>
+                    <div class="project-text">A BIT OF LOREM IP</div>
+                    <div class="project-links">
+                        <div class="project-star">STAR</div>
+                        <div class="quick-look">EYE</div>
+                        <div class="share-project">SHARE</div>
+                    </div>
+                </div>
+                <div class="money-maker">
+                    <div class="project-title">TITLE GOES HERE</div>
+                    <div class="project-text">A BIT OF LOREM IP</div>
+                    <div class="project-links">
+                        <div class="project-star">STAR</div>
+                        <div class="quick-look">EYE</div>
+                        <div class="share-project">SHARE</div>
+                    </div>
+                </div>
+            </div>
+            <div class="announcements">
+                <div id="maintenance" class="announcements-style">SITE MAINTENANCE</div>
+                <div id="community-share-day" class="announcements-style">COMMUNITY SHARE DAY</div>
+                <div id="updated-privacy-policy" class="announcements-style">UPDATED PRIVACY POLICY</div>
+            </div>
+            <div class="trending">
+                <div id="trending-one" class="trending-style">
+                    <div class="trending-pic">PIC</div>
+                    <div class="trending-user-info">
+                        <div class="trending-username">@WHAT</div>
+                        <div class="trending-userbio">BIO</div>
+                    </div>
+                </div>
+                <div id="trending-two" class="trending-style">
+                    <div class="trending-pic">PIC</div>
+                    <div class="trending-user-info">
+                        <div class="trending-username">@WHAT</div>
+                        <div class="trending-userbio">BIO</div>
+                    </div>
+                    <div id="trending-three" class="trending-style">
+                        <div class="trending-pic">PIC</div>
+                        <div class="trending-user-info">
+                            <div class="trending-username">@WHAT</div>
+                            <div class="trending-userbio">BIO</div>
+                        </div>
+                    </div>
+                    <div id="trending-four" class="trending-style">
+                        <div class="trending-pic">PIC</div>
+                        <div class="trending-user-info">
+                            <div class="trending-username">@WHAT</div>
+                            <div class="trending-userbio">BIO</div>
+                        </div>
+                    </div>
+                </div>
 </body>
 
 </html>
