--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet"> -->
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <title>Alpha Centauri Social Interaction Center (ACSIC)</title>
 </head>
 
@@ -18,46 +18,48 @@
         <div class="header">
             <div class="header-top">
                 <div class="searchbar">
-                    <div class="search-icon">MAG GLASS</div>
+                    <div class="search-icon"></div>
                     <input class="search-field">
                     </input>
                 </div>
                 <div class="settings">
-                    <button class="notifications">BELL</button>
-                    <button class="user-themes">LILPIC</button>
-                    <button class="user-settings">USERNAME</button>
+                    <button class="notifications"></button>
+                    <button class="user-themes"></button>
+                    <button class="button" class="user-settings" id="userGreet">@USERNAME</button>
                 </div>
             </div>
             <div class="header-main">
-                <div class="profile-pic">PIC</div>
+                <img class="profile-pic" src="SVGs-and-Images/profile-pic.jpg" alt="user photo" width="50px"
+                    height="auto">
                 <div class="greeting">
                     <div class="saluations">SALUTATIONS</div>
-                    <div class="user-name">USER</div>
+                    <div class="user-settings" id="userGreetTwo">USER</div>
                 </div>
                 <div class="user-create-content">
-                    <button class="button-style">NEW</button>
-                    <button class="button-style">UPLOAD</button>
-                    <button class="button-style">SHARE</button>
+                    <button class="button" class="button-style">NEW</button>
+                    <button class="button" class="button-style">UPLOAD</button>
+                    <button class="button" class="button-style">SHARE</button>
                 </div>
             </div>
         </div>
         <div class="sidebar">
             <div class="brand-logo">
-                <div class="logo-image">IMG</div>
+                <div class="logo-image"><img src="SVGs-and-Images/spiral.png" alt="the brand logo." width="50px"
+                        height="auto"></div>
                 <div class="brand-logo-text">BRAND TEXT</div>
             </div>
             <div class="nav-links">
-                <button id="sidebar-home" class="sidebar-links">HOME</button>
-                <button id="sidebar-profile" class="sidebar-links">PROFILE</button>
-                <button id="sidebar-messages" class="sidebar-links">MESSAGES</button>
-                <button id="sidebar-history" class="sidebar-links">HISTORY</button>
-                <button id="sidebar-tasks" class="sidebar-links">TASKS</button>
-                <button id="sidebar-communities" class="sidebar-links">COMMUNITIES</button>
+                <button class="button" id="sidebar-home" class="sidebar-links">HOME</button>
+                <button class="button" id="sidebar-profile" class="sidebar-links">PROFILE</button>
+                <button class="button" id="sidebar-messages" class="sidebar-links">MESSAGES</button>
+                <button class="button" id="sidebar-history" class="sidebar-links">HISTORY</button>
+                <button class="button" id="sidebar-tasks" class="sidebar-links">TASKS</button>
+                <button class="button" id="sidebar-communities" class="sidebar-links">COMMUNITIES</button>
             </div>
             <div class="general-settings">
-                <button id="sidebar-settngs" class="sidebar-links">SETTINGS</button>
-                <button id="sidebar-support" class="sidebar-links">SUPPORT</button>
-                <button id="sidebar-privacy" class="sidebar-links">PRIVACY</button>
+                <button class="button" id="sidebar-settngs" class="sidebar-links">SETTINGS</button>
+                <button class="button" id="sidebar-support" class="sidebar-links">SUPPORT</button>
+                <button class="button" id="sidebar-privacy" class="sidebar-links">PRIVACY</button>
             </div>
         </div>
         <div class="main">
