--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                     <div class="user-settings" id="userGreetTwo">USER</div>
                 </div>
                 <div class="user-create-content">
-                    <button class="button" class="button-style">NEW</button>
-                    <button class="button" class="button-style">UPLOAD</button>
-                    <button class="button" class="button-style">SHARE</button>
+                    <button class="button-style">NEW</button>
+                    <button class="button-style">UPLOAD</button>
+                    <button class="button-style">SHARE</button>
                 </div>
             </div>
         </div>
@@ -49,17 +49,17 @@
                 <div class="brand-logo-text">BRAND TEXT</div>
             </div>
             <div class="nav-links">
-                <button class="button" id="sidebar-home" class="sidebar-links">HOME</button>
-                <button class="button" id="sidebar-profile" class="sidebar-links">PROFILE</button>
-                <button class="button" id="sidebar-messages" class="sidebar-links">MESSAGES</button>
-                <button class="button" id="sidebar-history" class="sidebar-links">HISTORY</button>
-                <button class="button" id="sidebar-tasks" class="sidebar-links">TASKS</button>
-                <button class="button" id="sidebar-communities" class="sidebar-links">COMMUNITIES</button>
+                <button class="sidebar-button" id="sidebar-home" class="sidebar-links">HOME</button>
+                <button class="sidebar-button" id="sidebar-profile" class="sidebar-links">PROFILE</button>
+                <button class="sidebar-button" id="sidebar-messages" class="sidebar-links">MESSAGES</button>
+                <button class="sidebar-button" id="sidebar-history" class="sidebar-links">HISTORY</button>
+                <button class="sidebar-button" id="sidebar-tasks" class="sidebar-links">TASKS</button>
+                <button class="sidebar-button" id="sidebar-communities" class="sidebar-links">COMMUNITIES</button>
             </div>
             <div class="general-settings">
-                <button class="button" id="sidebar-settngs" class="sidebar-links">SETTINGS</button>
-                <button class="button" id="sidebar-support" class="sidebar-links">SUPPORT</button>
-                <button class="button" id="sidebar-privacy" class="sidebar-links">PRIVACY</button>
+                <button class="sidebar-button" id="sidebar-settngs" class="sidebar-links">SETTINGS</button>
+                <button class="sidebar-button" id="sidebar-support" class="sidebar-links">SUPPORT</button>
+                <button class="sidebar-button" id="sidebar-privacy" class="sidebar-links">PRIVACY</button>
             </div>
         </div>
         <div class="main">
