--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="settings">
                     <button class="notifications"></button>
                     <button class="user-themes"></button>
-                    <button class="button" class="user-settings" id="userGreet">@USERNAME</button>
+                    <button class="user-settings" id="userGreet">@USERNAME</button>
                 </div>
             </div>
             <div class="header-main">
