--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
                 <div class="settings">
                     <button class="notifications"></button>
                     <button class="user-themes"></button>
-                    <button class="user-settings" id="userGreet">@USERNAME</button>
+                    <button class="user-settings" id="userGreet">@Username</button>
                 </div>
             </div>
             <div class="header-main">
                 <img class="profile-pic" src="SVGs-and-Images/profile-pic.jpg" alt="user photo" width="50px"
                     height="auto">
                 <div class="greeting">
-                    <div class="saluations">SALUTATIONS</div>
-                    <div class="user-settings" id="userGreetTwo">USER</div>
+                    <div class="saluations">Salutations</div>
+                    <div class="user-settings" id="userGreetTwo">User</div>
                 </div>
                 <div class="user-create-content">
-                    <button class="button-style">NEW</button>
-                    <button class="button-style">UPLOAD</button>
-                    <button class="button-style">SHARE</button>
+                    <button class="button-style">New</button>
+                    <button class="button-style">Upload</button>
+                    <button class="button-style">Share</button>
                 </div>
             </div>
         </div>
@@ -46,28 +46,28 @@
             <div class="brand-logo">
                 <div class="logo-image"><img src="SVGs-and-Images/spiral.png" alt="the brand logo." width="50px"
                         height="auto"></div>
-                <div class="brand-logo-text">BRAND TEXT</div>
+                <div class="brand-logo-text">Dashboard</div>
             </div>
             <div class="nav-links">
-                <button class="sidebar-button" id="sidebar-home" class="sidebar-links">HOME</button>
-                <button class="sidebar-button" id="sidebar-profile" class="sidebar-links">PROFILE</button>
-                <button class="sidebar-button" id="sidebar-messages" class="sidebar-links">MESSAGES</button>
-                <button class="sidebar-button" id="sidebar-history" class="sidebar-links">HISTORY</button>
-                <button class="sidebar-button" id="sidebar-tasks" class="sidebar-links">TASKS</button>
-                <button class="sidebar-button" id="sidebar-communities" class="sidebar-links">COMMUNITIES</button>
+                <button class="sidebar-button" id="sidebar-home" class="sidebar-links">Home</button>
+                <button class="sidebar-button" id="sidebar-profile" class="sidebar-links">Profile</button>
+                <button class="sidebar-button" id="sidebar-messages" class="sidebar-links">Messages</button>
+                <button class="sidebar-button" id="sidebar-history" class="sidebar-links">History</button>
+                <button class="sidebar-button" id="sidebar-tasks" class="sidebar-links">Tasks</button>
+                <button class="sidebar-button" id="sidebar-communities" class="sidebar-links">Communities</button>
             </div>
             <div class="general-settings">
-                <button class="sidebar-button" id="sidebar-settngs" class="sidebar-links">SETTINGS</button>
-                <button class="sidebar-button" id="sidebar-support" class="sidebar-links">SUPPORT</button>
-                <button class="sidebar-button" id="sidebar-privacy" class="sidebar-links">PRIVACY</button>
+                <button class="sidebar-button" id="sidebar-settngs" class="sidebar-links">Settings</button>
+                <button class="sidebar-button" id="sidebar-support" class="sidebar-links">Support</button>
+                <button class="sidebar-button" id="sidebar-privacy" class="sidebar-links">Privacy</button>
             </div>
         </div>
         <div class="main">
             <div class="projects-container">
-                <h1>USER PROJECTS</h1>
+                <h4>User Projects</h4>
                 <div class="user-projects">
                     <div class="project">
-                        <div class="project-title">TITLE GOES HERE</div>
+                        <div class="project-title">Super Cool Project</div>
                         <div class="project-text">A BIT OF LOREM IP</div>
                         <div class="project-links">
                             <div class="project-star">STAR</div>
@@ -76,7 +76,7 @@
                         </div>
                     </div>
                     <div class="project">
-                        <div class="project-title">TITLE GOES HERE</div>
+                        <div class="project-title">Less Cool Project</div>
                         <div class="project-text">A BIT OF LOREM IP</div>
                         <div class="project-links">
                             <div class="project-star">STAR</div>
@@ -85,7 +85,7 @@
                         </div>
                     </div>
                     <div class="project">
-                        <div class="project-title">TITLE GOES HERE</div>
+                        <div class="project-title">Impossible App</div>
                         <div class="project-text">A BIT OF LOREM IP</div>
                         <div class="project-links">
                             <div class="project-star">STAR</div>
@@ -94,7 +94,7 @@
                         </div>
                     </div>
                     <div class="project">
-                        <div class="project-title">TITLE GOES HERE</div>
+                        <div class="project-title">Easy Peasy App</div>
                         <div class="project-text">A BIT OF LOREM IP</div>
                         <div class="project-links">
                             <div class="project-star">STAR</div>
@@ -103,7 +103,7 @@
                         </div>
                     </div>
                     <div class="project">
-                        <div class="project-title">TITLE GOES HERE</div>
+                        <div class="project-title">Ad Blocker</div>
                         <div class="project-text">A BIT OF LOREM IP</div>
                         <div class="project-links">
                             <div class="project-star">STAR</div>
@@ -112,7 +112,7 @@
                         </div>
                     </div>
                     <div class="project">
-                        <div class="project-title">TITLE GOES HERE</div>
+                        <div class="project-title">Money Maker</div>
                         <div class="project-text">A BIT OF LOREM IP</div>
                         <div class="project-links">
                             <div class="project-star">STAR</div>
@@ -124,17 +124,17 @@
             </div>
             <div class="announcements-container">
                 <div>
-                    <h1>ANNOUNCEMENTS</h1>
+                    <h4>Announcements</h4>
                 </div>
                 <div class="announcements">
-                    <div id="maintenance" class="announcements-cell">SITE MAINTENANCE</div>
-                    <div id="community-share-day" class="announcements-cell">COMMUNITY SHARE DAY</div>
-                    <div id="updated-privacy-policy" class="announcements-cell">UPDATED PRIVACY POLICY</div>
+                    <div id="maintenance" class="announcements-cell">Site Maintenance</div>
+                    <div id="community-share-day" class="announcements-cell">Community Share Day</div>
+                    <div id="updated-privacy-policy" class="announcements-cell">Updated Privacy Policy</div>
                 </div>
             </div>
             <div class="trending-container">
                 <div>
-                    <h1>TRENDING</h1>
+                    <h4>Trending</h4>
                 </div>
                 <div class="trending">
                     <div id="trending-one" class="trending-cell">
