made project closer to original

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
                 </div>
             </div>
             <div class="header-main">
-                <img class="profile-pic" src="SVGs-and-Images/profile-pic.jpg" alt="user photo" width="50px"
-                    height="auto">
+                <div class="profile-pic"></div>
                 <div class="greeting">
                     <div class="saluations">Salutations</div>
                     <div class="user-settings" id="userGreetTwo">User</div>
@@ -68,7 +67,7 @@
                 <div class="user-projects">
                     <div class="project">
                         <div class="project-title">Super Cool Project</div>
-                        <div class="project-text">A BIT OF LOREM IP</div>
+                        <div class="project-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse nisi rem minima expedita, facilis ex? </div>
                         <div class="project-links">
                             <div class="project-star">STAR</div>
                             <div class="quick-look">EYE</div>
@@ -77,7 +76,7 @@
                     </div>
                     <div class="project">
                         <div class="project-title">Less Cool Project</div>
-                        <div class="project-text">A BIT OF LOREM IP</div>
+                        <div class="project-text">Repellat neque sunt nulla eius, commodi consequatur ipsum quaerat beatae optio nemo autem ea unde.</div>
                         <div class="project-links">
                             <div class="project-star">STAR</div>
                             <div class="quick-look">EYE</div>
@@ -86,7 +85,7 @@
                     </div>
                     <div class="project">
                         <div class="project-title">Impossible App</div>
-                        <div class="project-text">A BIT OF LOREM IP</div>
+                        <div class="project-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse nisi rem minima expedita, facilis ex?</div>
                         <div class="project-links">
                             <div class="project-star">STAR</div>
                             <div class="quick-look">EYE</div>
@@ -95,7 +94,7 @@
                     </div>
                     <div class="project">
                         <div class="project-title">Easy Peasy App</div>
-                        <div class="project-text">A BIT OF LOREM IP</div>
+                        <div class="project-text">Repellat neque sunt nulla eius, commodi consequatur ipsum quaerat beatae optio nemo autem ea unde.</div>
                         <div class="project-links">
                             <div class="project-star">STAR</div>
                             <div class="quick-look">EYE</div>
@@ -104,7 +103,7 @@
                     </div>
                     <div class="project">
                         <div class="project-title">Ad Blocker</div>
-                        <div class="project-text">A BIT OF LOREM IP</div>
+                        <div class="project-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse nisi rem minima expedita, facilis ex?</div>
                         <div class="project-links">
                             <div class="project-star">STAR</div>
                             <div class="quick-look">EYE</div>
@@ -113,7 +112,7 @@
                     </div>
                     <div class="project">
                         <div class="project-title">Money Maker</div>
-                        <div class="project-text">A BIT OF LOREM IP</div>
+                        <div class="project-text">Repellat neque sunt nulla eius, commodi consequatur ipsum quaerat beatae optio nemo autem ea unde.</div>
                         <div class="project-links">
                             <div class="project-star">STAR</div>
                             <div class="quick-look">EYE</div>
@@ -171,3 +170,4 @@
 </body>
 
 </html>
+
