--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="profile-pic"></div>
                 <div class="greeting">
                     <div class="saluations">Salutations</div>
-                    <div class="user-settings" id="userGreetTwo">User</div>
+                    <div class="user-settings" id="userGreetTwo">Hank (@hankfontaine)</div>
                 </div>
                 <div class="user-create-content">
                     <button class="button-style">New</button>
