started rewriting project in js

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
             <div class="projects-container">
                 <h4>User Projects</h4>
                 <div class="user-projects">
-                    <div class="project">
-                        <div class="project-title">Super Cool Project</div>
+                    <div class="project" id = "project-one">
+                        <!-- <div class="project-title">Super Cool Project</div>
                         <div class="project-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse nisi rem minima expedita, facilis ex? </div>
                         <div class="project-links">
                             <div class="project-star">STAR</div>
                             <div class="quick-look">EYE</div>
                             <div class="share-project">SHARE</div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="project">
                         <div class="project-title">Less Cool Project</div>
