--- a/index.html
+++ b/index.html
@@ -66,58 +66,16 @@
                 <h4>User Projects</h4>
                 <div class="user-projects">
                     <div class="project" id = "project-one">
-                        <!-- <div class="project-title">Super Cool Project</div>
-                        <div class="project-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse nisi rem minima expedita, facilis ex? </div>
-                        <div class="project-links">
-                            <div class="project-star">STAR</div>
-                            <div class="quick-look">EYE</div>
-                            <div class="share-project">SHARE</div>
-                        </div> -->
                     </div>
-                    <div class="project">
-                        <div class="project-title">Less Cool Project</div>
-                        <div class="project-text">Repellat neque sunt nulla eius, commodi consequatur ipsum quaerat beatae optio nemo autem ea unde.</div>
-                        <div class="project-links">
-                            <div class="project-star">STAR</div>
-                            <div class="quick-look">EYE</div>
-                            <div class="share-project">SHARE</div>
-                        </div>
+                    <div class="project" id = "project-two">
                     </div>
-                    <div class="project">
-                        <div class="project-title">Impossible App</div>
-                        <div class="project-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse nisi rem minima expedita, facilis ex?</div>
-                        <div class="project-links">
-                            <div class="project-star">STAR</div>
-                            <div class="quick-look">EYE</div>
-                            <div class="share-project">SHARE</div>
-                        </div>
+                    <div class="project" id = "project-three">
                     </div>
-                    <div class="project">
-                        <div class="project-title">Easy Peasy App</div>
-                        <div class="project-text">Repellat neque sunt nulla eius, commodi consequatur ipsum quaerat beatae optio nemo autem ea unde.</div>
-                        <div class="project-links">
-                            <div class="project-star">STAR</div>
-                            <div class="quick-look">EYE</div>
-                            <div class="share-project">SHARE</div>
-                        </div>
+                    <div class="project" id = "project-four">
                     </div>
-                    <div class="project">
-                        <div class="project-title">Ad Blocker</div>
-                        <div class="project-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse nisi rem minima expedita, facilis ex?</div>
-                        <div class="project-links">
-                            <div class="project-star">STAR</div>
-                            <div class="quick-look">EYE</div>
-                            <div class="share-project">SHARE</div>
-                        </div>
+                    <div class="project" id = "project-five">
                     </div>
-                    <div class="project">
-                        <div class="project-title">Money Maker</div>
-                        <div class="project-text">Repellat neque sunt nulla eius, commodi consequatur ipsum quaerat beatae optio nemo autem ea unde.</div>
-                        <div class="project-links">
-                            <div class="project-star">STAR</div>
-                            <div class="quick-look">EYE</div>
-                            <div class="share-project">SHARE</div>
-                        </div>
+                    <div class="project" id = "project-six">
                     </div>
                 </div>
             </div>
