did some debugging

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet"> -->
-    <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
     <title>Alpha Centauri Social Interaction Center (ACSIC)</title>
 </head>
 
@@ -62,22 +62,7 @@
             </div>
         </div>
         <div class="main">
-            <div class="projects-container">
-                <h4>User Projects</h4>
-                <div class="user-projects">
-                    <div class="project" id = "project-one">
-                    </div>
-                    <div class="project" id = "project-two">
-                    </div>
-                    <div class="project" id = "project-three">
-                    </div>
-                    <div class="project" id = "project-four">
-                    </div>
-                    <div class="project" id = "project-five">
-                    </div>
-                    <div class="project" id = "project-six">
-                    </div>
-                </div>
+            <div class="projects-container" id = "projects-container">
             </div>
             <div class="announcements-container">
                 <div>
