continued to put project into js

--- a/index.html
+++ b/index.html
@@ -61,15 +61,7 @@
         <div class="main">
             <div class="projects-container" id = "projects-container">
             </div>
-            <div class="announcements-container">
-                <div>
-                    <h4>Announcements</h4>
-                </div>
-                <div class="announcements">
-                    <div id="maintenance" class="announcements-cell">Site Maintenance</div>
-                    <div id="community-share-day" class="announcements-cell">Community Share Day</div>
-                    <div id="updated-privacy-policy" class="announcements-cell">Updated Privacy Policy</div>
-                </div>
+            <div class="announcements-container" id = "announcements-container">
             </div>
             <div class="trending-container">
                 <div>
